# weil-hackathon

TeamDHEINCHOO/SECUREGUARD_APPLETS/: CMakeCache.txt  Makefile  README_BLOCKCHAIN.md  cmake_install.cmake  counter.wasm
TeamDHEINCHOO/SECUREGUARD_APPLETS/src/: contract.hpp  main.cpp
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/: DEMO_INSTRUCTIONS.md  database.db
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/FINAL/: agent.py  app.py  backend.py  init_db.py  security_tools.py  store.html  weil_ai.py
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/FINAL/templates/: store.html
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/.codex/environments/: environment.toml
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/integrations/final/: agent.py  app.py  attack_login.py  backend.py  requirements.txt
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/integrations/secureguard_contract/: CMakeLists.txt  secureguard.widl
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/server/: index.js
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/src/: App.jsx  index.css
TeamDHEINCHOO/SECUREGUARD_SOURCE_CODE/New_project/New project/src/components/: ActionButton.jsx  ActiveScansPanel.jsx  BlockchainAuditLogsPanel.jsx  BlockchainEscrowPanel.jsx  CentralIntelligencePanel.jsx  ConfigureAgentModal.jsx  MetaCard.jsx  PageHeader.jsx  ProofGenerationPanel.jsx  ScanActivityPanel.jsx  Sidebar.jsx  (+6 more)
(+9 files in other folders)
